submission/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tp2
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
